--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
         </div>
     </section>
 
+    <!-- Hero Spacer - maintains scroll space -->
+    <div class="hero-spacer"></div>
+
+    <!-- Content Wrapper - scrolls over hero -->
+    <div class="content-wrapper">
+
     <!-- About Section -->
     <section id="about" class="about">
         <div class="container">
@@ -247,6 +253,8 @@
             </div>
         </div>
     </section>
+
+    </div><!-- End Content Wrapper -->
 
     <script src="script.js"></script>
 </body>
